--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -7,86 +7,149 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                 0    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 1    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 2    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 3    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 4    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 5    \\\n",
-      "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 6    \\\n",
-      "0  [[0.0011111111111111111, 0.8846153846153847, 0...   \n",
-      "\n",
-      "                                                 7    \\\n",
-      "0  [[0.0010916179337231969, 0.8717948717948718, 0...   \n",
-      "\n",
-      "                                                 8    \\\n",
-      "0  [[0.0010721247563352826, 0.8717948717948718, 0...   \n",
-      "\n",
-      "                                                 9    ...  \\\n",
-      "0  [[0.0011111111111111111, 0.8717948717948718, 0...  ...   \n",
-      "\n",
-      "                                                 413  \\\n",
-      "0  [[0.002105263157894737, 0.9230769230769231, 0....   \n",
-      "\n",
-      "                                                 414  \\\n",
-      "0  [[0.0020857699805068228, 0.9230769230769231, 0...   \n",
-      "\n",
-      "                                                 415  \\\n",
-      "0  [[0.002007797270955166, 0.9102564102564102, 0....   \n",
-      "\n",
-      "                                                 416  \\\n",
-      "0  [[0.0019688109161793373, 0.9102564102564102, 0...   \n",
-      "\n",
-      "                                                 417  \\\n",
-      "0  [[0.0019883040935672514, 0.9102564102564102, 0...   \n",
-      "\n",
-      "                                                 418  \\\n",
-      "0  [[0.002007797270955166, 0.9102564102564102, 0....   \n",
-      "\n",
-      "                                                 419  \\\n",
-      "0  [[0.0020467836257309943, 0.9102564102564102, 0...   \n",
-      "\n",
-      "                                                 420  \\\n",
-      "0  [[0.0021637426900584797, 0.9102564102564102, 0...   \n",
-      "\n",
-      "                                                 421  \\\n",
-      "0  [[0.0021247563352826512, 0.9102564102564102, 0...   \n",
-      "\n",
-      "                                                 422  \n",
-      "0  [[0.0022222222222222222, 0.9102564102564102, 0...  \n",
-      "\n",
-      "[1 rows x 423 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>413</th>\n",
+       "      <th>414</th>\n",
+       "      <th>415</th>\n",
+       "      <th>416</th>\n",
+       "      <th>417</th>\n",
+       "      <th>418</th>\n",
+       "      <th>419</th>\n",
+       "      <th>420</th>\n",
+       "      <th>421</th>\n",
+       "      <th>422</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011306042884990253, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0011111111111111111, 0.8846153846153847, 0...</td>\n",
+       "      <td>[[0.0010916179337231969, 0.8717948717948718, 0...</td>\n",
+       "      <td>[[0.0010721247563352826, 0.8717948717948718, 0...</td>\n",
+       "      <td>[[0.0011111111111111111, 0.8717948717948718, 0...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[[0.002105263157894737, 0.9230769230769231, 0....</td>\n",
+       "      <td>[[0.0020857699805068228, 0.9230769230769231, 0...</td>\n",
+       "      <td>[[0.002007797270955166, 0.9102564102564102, 0....</td>\n",
+       "      <td>[[0.0019688109161793373, 0.9102564102564102, 0...</td>\n",
+       "      <td>[[0.0019883040935672514, 0.9102564102564102, 0...</td>\n",
+       "      <td>[[0.002007797270955166, 0.9102564102564102, 0....</td>\n",
+       "      <td>[[0.0020467836257309943, 0.9102564102564102, 0...</td>\n",
+       "      <td>[[0.0021637426900584797, 0.9102564102564102, 0...</td>\n",
+       "      <td>[[0.0021247563352826512, 0.9102564102564102, 0...</td>\n",
+       "      <td>[[0.0022222222222222222, 0.9102564102564102, 0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 423 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 0    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 1    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 2    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 3    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 4    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 5    \\\n",
+       "0  [[0.0011306042884990253, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 6    \\\n",
+       "0  [[0.0011111111111111111, 0.8846153846153847, 0...   \n",
+       "\n",
+       "                                                 7    \\\n",
+       "0  [[0.0010916179337231969, 0.8717948717948718, 0...   \n",
+       "\n",
+       "                                                 8    \\\n",
+       "0  [[0.0010721247563352826, 0.8717948717948718, 0...   \n",
+       "\n",
+       "                                                 9    ...  \\\n",
+       "0  [[0.0011111111111111111, 0.8717948717948718, 0...  ...   \n",
+       "\n",
+       "                                                 413  \\\n",
+       "0  [[0.002105263157894737, 0.9230769230769231, 0....   \n",
+       "\n",
+       "                                                 414  \\\n",
+       "0  [[0.0020857699805068228, 0.9230769230769231, 0...   \n",
+       "\n",
+       "                                                 415  \\\n",
+       "0  [[0.002007797270955166, 0.9102564102564102, 0....   \n",
+       "\n",
+       "                                                 416  \\\n",
+       "0  [[0.0019688109161793373, 0.9102564102564102, 0...   \n",
+       "\n",
+       "                                                 417  \\\n",
+       "0  [[0.0019883040935672514, 0.9102564102564102, 0...   \n",
+       "\n",
+       "                                                 418  \\\n",
+       "0  [[0.002007797270955166, 0.9102564102564102, 0....   \n",
+       "\n",
+       "                                                 419  \\\n",
+       "0  [[0.0020467836257309943, 0.9102564102564102, 0...   \n",
+       "\n",
+       "                                                 420  \\\n",
+       "0  [[0.0021637426900584797, 0.9102564102564102, 0...   \n",
+       "\n",
+       "                                                 421  \\\n",
+       "0  [[0.0021247563352826512, 0.9102564102564102, 0...   \n",
+       "\n",
+       "                                                 422  \n",
+       "0  [[0.0022222222222222222, 0.9102564102564102, 0...  \n",
+       "\n",
+       "[1 rows x 423 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "from scipy.io import loadmat\n",
-    "\n",
-    "data = loadmat('data/raw/water_dataset.mat')\n",
-    "\n",
-    "X = data['X_tr']\n",
-    "y = data['Y_tr'].ravel()\n",
-    "\n",
-    "df = pd.DataFrame(X)\n",
-    "\n",
-    "df.head()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
