--- a/notebooks/DataModeling.ipynb
+++ b/notebooks/DataModeling.ipynb
@@ -7,32 +7,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV, KFold\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.svm import SVR\n",
+    "df_balanced = pd.read_csv(\"data/Preprocessed_dataset.csv\")\n",
+    "scaled_cols = ['ammonia','biochemical_oxygen_demand','dissolved_oxygen',\n",
+    "               'orthophosphate','ph','temperature','nitrogen','nitrate']\n",
     "\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
-    "import joblib\n",
+    "X = df_balanced[scaled_cols]  # fitur numerik sudah discale\n",
+    "y = df_balanced['label']      # label encoded\n",
     "\n",
-    "sns.set(style=\"whitegrid\")"
+    "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+    "    X, y, test_size=0.3, stratify=y, random_state=42\n",
+    ")\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_temp, y_temp, test_size=0.5, stratify=y_temp, random_state=42\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "1326a918-192f-4d8b-a69e-01d45c94c3cc",
    "metadata": {},
    "outputs": [
@@ -40,272 +36,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukuran dataset: (3276, 30)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ph</th>\n",
-       "      <th>Hardness</th>\n",
-       "      <th>Solids</th>\n",
-       "      <th>Chloramines</th>\n",
-       "      <th>Sulfate</th>\n",
-       "      <th>Conductivity</th>\n",
-       "      <th>Organic_carbon</th>\n",
-       "      <th>Trihalomethanes</th>\n",
-       "      <th>Turbidity</th>\n",
-       "      <th>Potability</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Qi_Conductivity</th>\n",
-       "      <th>WiQi_Conductivity</th>\n",
-       "      <th>Qi_Organic_carbon</th>\n",
-       "      <th>WiQi_Organic_carbon</th>\n",
-       "      <th>Qi_Trihalomethanes</th>\n",
-       "      <th>WiQi_Trihalomethanes</th>\n",
-       "      <th>Qi_Turbidity</th>\n",
-       "      <th>WiQi_Turbidity</th>\n",
-       "      <th>WQI</th>\n",
-       "      <th>WQI_category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.036752</td>\n",
-       "      <td>204.890455</td>\n",
-       "      <td>20791.318981</td>\n",
-       "      <td>7.300212</td>\n",
-       "      <td>368.516441</td>\n",
-       "      <td>564.308654</td>\n",
-       "      <td>10.379783</td>\n",
-       "      <td>86.990970</td>\n",
-       "      <td>2.963135</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>59.262708</td>\n",
-       "      <td>5.333644</td>\n",
-       "      <td>79.606391</td>\n",
-       "      <td>Very Poor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.716080</td>\n",
-       "      <td>129.422921</td>\n",
-       "      <td>18630.057858</td>\n",
-       "      <td>6.635246</td>\n",
-       "      <td>333.073546</td>\n",
-       "      <td>592.885359</td>\n",
-       "      <td>15.180013</td>\n",
-       "      <td>56.329076</td>\n",
-       "      <td>4.500656</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>70.411345</td>\n",
-       "      <td>7.041135</td>\n",
-       "      <td>90.013125</td>\n",
-       "      <td>8.101181</td>\n",
-       "      <td>75.314724</td>\n",
-       "      <td>Very Poor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8.099124</td>\n",
-       "      <td>224.236259</td>\n",
-       "      <td>19909.541732</td>\n",
-       "      <td>9.275884</td>\n",
-       "      <td>333.073546</td>\n",
-       "      <td>418.606213</td>\n",
-       "      <td>16.868637</td>\n",
-       "      <td>66.420093</td>\n",
-       "      <td>3.055934</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>83.025116</td>\n",
-       "      <td>8.302512</td>\n",
-       "      <td>61.118675</td>\n",
-       "      <td>5.500681</td>\n",
-       "      <td>86.294241</td>\n",
-       "      <td>Very Poor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8.316766</td>\n",
-       "      <td>214.373394</td>\n",
-       "      <td>22018.417441</td>\n",
-       "      <td>8.059332</td>\n",
-       "      <td>356.886136</td>\n",
-       "      <td>363.266516</td>\n",
-       "      <td>18.436524</td>\n",
-       "      <td>100.341674</td>\n",
-       "      <td>4.628771</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90.816629</td>\n",
-       "      <td>9.081663</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>92.575411</td>\n",
-       "      <td>8.331787</td>\n",
-       "      <td>92.375185</td>\n",
-       "      <td>Very Poor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9.092223</td>\n",
-       "      <td>181.101509</td>\n",
-       "      <td>17978.986339</td>\n",
-       "      <td>6.546600</td>\n",
-       "      <td>310.135738</td>\n",
-       "      <td>398.410813</td>\n",
-       "      <td>11.558279</td>\n",
-       "      <td>31.997993</td>\n",
-       "      <td>4.075075</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99.602703</td>\n",
-       "      <td>9.960270</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>39.997491</td>\n",
-       "      <td>3.999749</td>\n",
-       "      <td>81.501509</td>\n",
-       "      <td>7.335136</td>\n",
-       "      <td>84.539184</td>\n",
-       "      <td>Very Poor</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
-       "0  7.036752  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
-       "1  3.716080  129.422921  18630.057858     6.635246  333.073546    592.885359   \n",
-       "2  8.099124  224.236259  19909.541732     9.275884  333.073546    418.606213   \n",
-       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
-       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
-       "\n",
-       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  ...  \\\n",
-       "0       10.379783        86.990970   2.963135           0  ...   \n",
-       "1       15.180013        56.329076   4.500656           0  ...   \n",
-       "2       16.868637        66.420093   3.055934           0  ...   \n",
-       "3       18.436524       100.341674   4.628771           0  ...   \n",
-       "4       11.558279        31.997993   4.075075           0  ...   \n",
-       "\n",
-       "   Qi_Conductivity  WiQi_Conductivity  Qi_Organic_carbon  WiQi_Organic_carbon  \\\n",
-       "0       100.000000          10.000000              100.0                 10.0   \n",
-       "1       100.000000          10.000000              100.0                 10.0   \n",
-       "2       100.000000          10.000000              100.0                 10.0   \n",
-       "3        90.816629           9.081663              100.0                 10.0   \n",
-       "4        99.602703           9.960270              100.0                 10.0   \n",
-       "\n",
-       "   Qi_Trihalomethanes  WiQi_Trihalomethanes  Qi_Turbidity  WiQi_Turbidity  \\\n",
-       "0          100.000000             10.000000     59.262708        5.333644   \n",
-       "1           70.411345              7.041135     90.013125        8.101181   \n",
-       "2           83.025116              8.302512     61.118675        5.500681   \n",
-       "3          100.000000             10.000000     92.575411        8.331787   \n",
-       "4           39.997491              3.999749     81.501509        7.335136   \n",
-       "\n",
-       "         WQI  WQI_category  \n",
-       "0  79.606391     Very Poor  \n",
-       "1  75.314724     Very Poor  \n",
-       "2  86.294241     Very Poor  \n",
-       "3  92.375185     Very Poor  \n",
-       "4  84.539184     Very Poor  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "Kolom dataset: ['ph', 'Hardness', 'Solids', 'Chloramines', 'Sulfate', 'Conductivity', 'Organic_carbon', 'Trihalomethanes', 'Turbidity', 'Potability', 'Qi_ph', 'WiQi_ph', 'Qi_Hardness', 'WiQi_Hardness', 'Qi_Solids', 'WiQi_Solids', 'Qi_Chloramines', 'WiQi_Chloramines', 'Qi_Sulfate', 'WiQi_Sulfate', 'Qi_Conductivity', 'WiQi_Conductivity', 'Qi_Organic_carbon', 'WiQi_Organic_carbon', 'Qi_Trihalomethanes', 'WiQi_Trihalomethanes', 'Qi_Turbidity', 'WiQi_Turbidity', 'WQI', 'WQI_category']\n"
+      "           0       1.00      1.00      1.00      2915\n",
+      "           1       1.00      0.99      1.00       173\n",
+      "           2       1.00      1.00      1.00      1968\n",
+      "           3       0.99      1.00      0.99        74\n",
+      "\n",
+      "    accuracy                           1.00      5130\n",
+      "   macro avg       1.00      1.00      1.00      5130\n",
+      "weighted avg       1.00      1.00      1.00      5130\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "## 1. LOAD DATA\n",
-    "df = pd.read_csv(\"../data/water_quality_cleaned.csv\")\n",
-    "print(\"Ukuran dataset:\", df.shape)\n",
-    "display(df.head())\n",
-    "print(\"\\nKolom dataset:\", df.columns.tolist())\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "model = RandomForestClassifier(n_estimators=200, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_val)\n",
+    "print(classification_report(y_val, y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8c76dd99-e97b-4c58-b3d4-04a532db4447",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X shape: (3276, 9)\n",
-      "y shape: (3276,)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'notebook/label_encoder.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelEncoder\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjoblib\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m le \u001b[38;5;241m=\u001b[39m \u001b[43mjoblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnotebook/label_encoder.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m cm \u001b[38;5;241m=\u001b[39m confusion_matrix(y_val, y_pred)\n\u001b[0;32m     10\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(cm, annot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, fmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m, xticklabels\u001b[38;5;241m=\u001b[39mle\u001b[38;5;241m.\u001b[39mclasses_, yticklabels\u001b[38;5;241m=\u001b[39mle\u001b[38;5;241m.\u001b[39mclasses_)\n",
+      "File \u001b[1;32m~\\miniconda\\envs\\myenv\\lib\\site-packages\\joblib\\numpy_pickle.py:650\u001b[0m, in \u001b[0;36mload\u001b[1;34m(filename, mmap_mode)\u001b[0m\n\u001b[0;32m    648\u001b[0m         obj \u001b[38;5;241m=\u001b[39m _unpickle(fobj)\n\u001b[0;32m    649\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 650\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    651\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m _read_fileobject(f, filename, mmap_mode) \u001b[38;5;28;01mas\u001b[39;00m fobj:\n\u001b[0;32m    652\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(fobj, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m    653\u001b[0m                 \u001b[38;5;66;03m# if the returned file object is a string, this means we\u001b[39;00m\n\u001b[0;32m    654\u001b[0m                 \u001b[38;5;66;03m# try to load a pickle file generated with an version of\u001b[39;00m\n\u001b[0;32m    655\u001b[0m                 \u001b[38;5;66;03m# Joblib so we load it with joblib compatibility function.\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'notebook/label_encoder.pkl'"
      ]
     }
    ],
    "source": [
-    "## 2. FEATURES & TARGET\n",
-    "# Di notebook ini kita memprediksi **WQI** (regresi).\n",
-    "# Fitur: ph, Hardness, Solids, Chloramines, Sulfate, Conductivity, Organic_carbon, Trihalomethanes, Turbidity\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import joblib\n",
     "\n",
-    "features = ['ph', 'Hardness', 'Solids', 'Chloramines', 'Sulfate',\n",
-    "            'Conductivity', 'Organic_carbon', 'Trihalomethanes', 'Turbidity']\n",
-    "target = 'WQI'\n",
-    "\n",
-    "# safety check: pastikan fitur ada di df\n",
-    "missing_feats = [c for c in features + [target] if c not in df.columns]\n",
-    "if missing_feats:\n",
-    "    raise ValueError(f\"Kolom hilang di dataset: {missing_feats}\")\n",
-    "\n",
-    "X = df[features].copy()\n",
-    "y = df[target].copy()\n",
-    "\n",
-    "print(\"X shape:\", X.shape)\n",
-    "print(\"y shape:\", y.shape)\n"
+    "le = joblib.load('notebooks/label_encoder.pkl')\n",
+    "cm = confusion_matrix(y_val, y_pred)\n",
+    "sns.heatmap(cm, annot=True, fmt='d', xticklabels=le.classes_, yticklabels=le.classes_)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -940,9 +728,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -954,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
