--- a/notebooks/DataPreProcessing.ipynb
+++ b/notebooks/DataPreProcessing.ipynb
@@ -1379,17 +1379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
    "id": "0be0ac2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['label_encoder.pkl']"
+       "['notebooks/label_encoder.pkl']"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
